# raster-features-extraction

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: CATEGORY_EXTRACTION.md  CLI_REFERENCE.md  CONTRIBUTING.md  FEATURE_EXTRACTION.md  INSTALLATION.md  OPTIMAL_EXTRACTION_PARAMETERS.md  VISUALIZATION.md  raster_feature_extraction_analysis.md
qgis_sonification_pipeline/: README.md  run_sonification_pipeline.sh
qgis_sonification_pipeline/scripts/: 00_project_input.py  01_extract_features.py  02_zonal_statistics.py  03_feature_masking.py  04_polygonize_masks.py  05_temporal_simulation.py
qgis_sonification_pipeline/utils/: raster_utils.py  vector_utils.py
raster_features/: __init__.py  cli.py
raster_features/core/: __init__.py  config.py  io.py  logging_config.py
raster_features/features/: __init__.py  extract_basic_features.py  extract_optimized_spectral.py  hydrology.py  ml.py  spatial.py  spectral.py  spectral_fix.py  spectral_numba.py  spectral_optimized.py  stats.py  terrain.py  texture.py
raster_features/utils/: __init__.py  add_feature_stats.py  metadata.py  utils.py  visualization.py
raster_features/utils/visualization_scripts/: __init__.py  compare_features.py  visualize_3d.py  visualize_interactive.py
scripts/: batch_visualize.sh  check_gdal.py  extract_by_category.sh  run_batch_folder.sh  run_tests.sh  visualize_features.sh
tests/: __init__.py  test_features.py  test_utils.py
