[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raster_features"
version = "0.1.0"
description = "Comprehensive raster feature extraction pipeline"
readme = "README.md"
authors = [
    {name = "Elena Project Team", email = "user@example.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "gdal>=3.3.0",
    "rasterio>=1.2.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "opencv-python>=4.5.0",
    "pywavelets>=1.1.0",
    "networkx>=2.6.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "libpysal>=4.5.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "flake8>=4.0.0",
    "black>=21.12b0",
]
ml = [
    "torch>=1.10.0",
    "torchvision>=0.11.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/raster_features"
"Bug Tracker" = "https://github.com/yourusername/raster_features/issues"

[project.scripts]
extract-features = "raster_features.cli:main"
analyze-features = "raster_features.utils.metadata:analyze_features_cli"
visualize-features = "raster_features.utils.visualization:visualize_cli"

[tool.setuptools.packages.find]
include = ["raster_features*"]
exclude = ["FKt231024_M3_dataset*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
